--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1050,6 +1050,34 @@ html {
   border-bottom: dashed 1px #17384B;
 }
 
+.administracion-fotos{
+  display: flex;
+  flex-direction: row;
+}
+
+.input-foto{
+  height: 50px;
+  width: 50px;
+  overflow: hidden;
+  background-color: lightgrey;
+  border: 1px solid darkgray;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  input{
+    opacity: 0;
+    height: 50px;
+    width: 50px;
+  }
+  img{
+    position: absolute;
+    max-height: 50px;
+    clip: rect(0px,50px,50px,0px);
+  }
+}
+
+
+
 /*NOTICIAS*/
 #noticias-filtro {
   display: flex;
