--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -1004,8 +1004,12 @@ table {
 table th {
   padding: 10px;
 }
+/* line 920, ../sass/screen.scss */
+table td {
+  padding: 10px;
+}
 
-/* line 921, ../sass/screen.scss */
+/* line 926, ../sass/screen.scss */
 #footer {
   margin: 10px;
   cursor: pointer;
@@ -1017,13 +1021,13 @@ table th {
   flex-wrap: wrap;
   justify-content: center;
 }
-/* line 931, ../sass/screen.scss */
+/* line 936, ../sass/screen.scss */
 #footer div {
   margin: 5px;
 }
 
 /*SECCIONES DE ADMINISTRACION*/
-/* line 937, ../sass/screen.scss */
+/* line 942, ../sass/screen.scss */
 #ingreso {
   margin-top: 100px;
   max-width: 100%;
@@ -1033,13 +1037,13 @@ table th {
   justify-content: center;
 }
 @media (max-width: 600px) {
-  /* line 937, ../sass/screen.scss */
+  /* line 942, ../sass/screen.scss */
   #ingreso {
     margin-top: 50px;
   }
 }
 
-/* line 949, ../sass/screen.scss */
+/* line 954, ../sass/screen.scss */
 #administracion,
 #noticias {
   display: flex;
@@ -1050,14 +1054,14 @@ table th {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 949, ../sass/screen.scss */
+  /* line 954, ../sass/screen.scss */
   #administracion,
   #noticias {
     margin-top: 50px;
   }
 }
 
-/* line 974, ../sass/screen.scss */
+/* line 979, ../sass/screen.scss */
 .administracion-title,
 #administracion-form,
 .administracion-separator,
@@ -1074,12 +1078,12 @@ table th {
   max-width: 1000px;
 }
 
-/* line 991, ../sass/screen.scss */
+/* line 996, ../sass/screen.scss */
 #ingreso-form {
   width: 100%;
 }
 
-/* line 995, ../sass/screen.scss */
+/* line 1000, ../sass/screen.scss */
 #administracion-form,
 #nuevo-usuario-form,
 #ingreso-form {
@@ -1087,7 +1091,7 @@ table th {
   flex-direction: column;
   justify-content: flex-start;
 }
-/* line 1001, ../sass/screen.scss */
+/* line 1006, ../sass/screen.scss */
 #administracion-form .administracion-inputs,
 #administracion-form .nuevo-usuario-inputs,
 #nuevo-usuario-form .administracion-inputs,
@@ -1099,7 +1103,7 @@ table th {
   flex-wrap: wrap;
 }
 
-/* line 1010, ../sass/screen.scss */
+/* line 1015, ../sass/screen.scss */
 #administracion-oferta,
 #administracion-noticias,
 #administracion-slider {
@@ -1110,7 +1114,7 @@ table th {
   justify-content: flex-start;
 }
 
-/* line 1020, ../sass/screen.scss */
+/* line 1025, ../sass/screen.scss */
 .administracion-title,
 .nuevo-usuario-title,
 .noticias-title,
@@ -1129,7 +1133,7 @@ table th {
   background-image: linear-gradient(to right, #dedede, #ffffff);
 }
 @media (max-width: 600px) {
-  /* line 1020, ../sass/screen.scss */
+  /* line 1025, ../sass/screen.scss */
   .administracion-title,
   .nuevo-usuario-title,
   .noticias-title,
@@ -1138,19 +1142,19 @@ table th {
   }
 }
 
-/* line 1038, ../sass/screen.scss */
+/* line 1043, ../sass/screen.scss */
 .administracion-input,
 .nuevo-usuario-input {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
-/* line 1043, ../sass/screen.scss */
+/* line 1048, ../sass/screen.scss */
 .administracion-input span,
 .nuevo-usuario-input span {
   margin: 5px;
 }
-/* line 1048, ../sass/screen.scss */
+/* line 1053, ../sass/screen.scss */
 .administracion-input input,
 .administracion-input select,
 .nuevo-usuario-input input,
@@ -1164,8 +1168,8 @@ table th {
   margin-bottom: 5px;
 }
 
-/* line 1062, ../sass/screen.scss */
-textarea {
+/* line 1068, ../sass/screen.scss */
+.administracion-input textarea {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -1176,13 +1180,13 @@ textarea {
   max-height: 300px;
 }
 
-/* line 1074, ../sass/screen.scss */
+/* line 1082, ../sass/screen.scss */
 .administracion-button-bar,
 .nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 }
-/* line 1080, ../sass/screen.scss */
+/* line 1088, ../sass/screen.scss */
 .administracion-button-bar button,
 .nuevo-usuario-button-bar button {
   background-color: transparent;
@@ -1190,13 +1194,13 @@ textarea {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1086, ../sass/screen.scss */
+/* line 1094, ../sass/screen.scss */
 .administracion-button-bar button:hover,
 .nuevo-usuario-button-bar button:hover {
   border-bottom-color: #17384B;
 }
 
-/* line 1091, ../sass/screen.scss */
+/* line 1099, ../sass/screen.scss */
 .administracion-separator {
   width: 100%;
   height: 2px !important;
@@ -1206,13 +1210,13 @@ textarea {
   margin-bottom: 50px;
 }
 
-/* line 1100, ../sass/screen.scss */
+/* line 1108, ../sass/screen.scss */
 .administracion-fotos {
   display: flex;
   flex-direction: row;
 }
 
-/* line 1105, ../sass/screen.scss */
+/* line 1113, ../sass/screen.scss */
 .input-foto {
   height: 50px;
   width: 50px;
@@ -1223,14 +1227,14 @@ textarea {
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
-/* line 1114, ../sass/screen.scss */
+/* line 1122, ../sass/screen.scss */
 .input-foto input {
   opacity: 0;
   height: 50px;
   width: 50px;
   background-color: #133548;
 }
-/* line 1120, ../sass/screen.scss */
+/* line 1128, ../sass/screen.scss */
 .input-foto img {
   position: absolute;
   background-color: #133548;
@@ -1241,7 +1245,7 @@ textarea {
   border-radius: 2px;
 }
 
-/* line 1131, ../sass/screen.scss */
+/* line 1139, ../sass/screen.scss */
 .administracion-sub-title {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 25px;
@@ -1251,14 +1255,14 @@ textarea {
 }
 
 /*NOTICIAS*/
-/* line 1142, ../sass/screen.scss */
+/* line 1150, ../sass/screen.scss */
 #noticias-filtro {
   display: flex;
   padding: 20px;
   flex-direction: row;
   justify-content: left;
 }
-/* line 1147, ../sass/screen.scss */
+/* line 1155, ../sass/screen.scss */
 #noticias-filtro select {
   margin-right: 2%;
   height: 32px;
@@ -1271,12 +1275,12 @@ textarea {
   background-color: transparent;
 }
 
-/* line 1190, ../sass/screen.scss */
+/* line 1198, ../sass/screen.scss */
 #noticias-main {
   background-color: #133548;
 }
 
-/* line 1195, ../sass/screen.scss */
+/* line 1203, ../sass/screen.scss */
 #noticias-form {
   max-width: 1000px;
   width: 100%;
@@ -1286,22 +1290,22 @@ textarea {
   background-color: white;
 }
 
-/* line 1205, ../sass/screen.scss */
+/* line 1213, ../sass/screen.scss */
 #noticias-panel {
   margin: 35px;
 }
 
 @media (min-width: 385px) {
-  /* line 1210, ../sass/screen.scss */
+  /* line 1218, ../sass/screen.scss */
   #noticias-panel-fotos {
     max-width: 50%;
   }
 }
-/* line 1214, ../sass/screen.scss */
+/* line 1222, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main {
   overflow: hidden;
 }
-/* line 1216, ../sass/screen.scss */
+/* line 1224, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main img {
   margin-left: 15px;
   border-radius: 5px;
@@ -1309,7 +1313,7 @@ textarea {
   max-height: 90%;
   max-width: 90%;
 }
-/* line 1225, ../sass/screen.scss */
+/* line 1233, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-thumbs img {
   margin-left: 15px;
   margin-top: 5px;
@@ -1318,12 +1322,12 @@ textarea {
   border-radius: 2px;
 }
 
-/* line 1235, ../sass/screen.scss */
+/* line 1243, ../sass/screen.scss */
 #noticias-panel-texto {
   color: white;
   padding: 5px;
 }
-/* line 1238, ../sass/screen.scss */
+/* line 1246, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-titulo {
   width: 100%;
   margin-bottom: 15px;
@@ -1333,7 +1337,7 @@ textarea {
   color: #FFFFFF;
   font-family: 'Lato Heavy', serif;
 }
-/* line 1249, ../sass/screen.scss */
+/* line 1257, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-detalle {
   font-family: 'Montserrat Light', serif;
   width: 95%;
@@ -1347,21 +1351,21 @@ textarea {
 }
 
 @media (min-width: 600px) {
-  /* line 1262, ../sass/screen.scss */
+  /* line 1270, ../sass/screen.scss */
   #noticias-panel {
     display: flex;
     flex-direction: row-reverse;
   }
 }
 
-/* line 1269, ../sass/screen.scss */
+/* line 1277, ../sass/screen.scss */
 #noticias-nuevo-comentario {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-/* line 1274, ../sass/screen.scss */
+/* line 1282, ../sass/screen.scss */
 #noticias-nuevo-comentario textarea {
   width: 100%;
   right: 5px;
@@ -1372,14 +1376,14 @@ textarea {
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
-/* line 1286, ../sass/screen.scss */
+/* line 1294, ../sass/screen.scss */
 #noticias-nuevo-comentario div {
   width: 90%;
   position: relative;
   margin-top: -45px;
   margin-bottom: 20px;
 }
-/* line 1291, ../sass/screen.scss */
+/* line 1299, ../sass/screen.scss */
 #noticias-nuevo-comentario div #noticias-nuevo-btn {
   width: 110px;
   background-color: white;
@@ -1394,19 +1398,19 @@ textarea {
   text-align: center;
 }
 
-/* line 1308, ../sass/screen.scss */
+/* line 1316, ../sass/screen.scss */
 #noticias-comentarios {
   background-color: #3f6175;
   color: white;
 }
-/* line 1311, ../sass/screen.scss */
+/* line 1319, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-list {
   max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* line 1318, ../sass/screen.scss */
+/* line 1326, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-title {
   width: 90%;
   font-family: 'Lato Heavy', serif;
@@ -1418,17 +1422,17 @@ textarea {
   font-size: 38px;
   line-height: 25px;
 }
-/* line 1330, ../sass/screen.scss */
+/* line 1338, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario {
   max-width: 90%;
   margin-bottom: 20px;
 }
-/* line 1334, ../sass/screen.scss */
+/* line 1342, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-user {
   line-height: 24px;
   font-size: 23px;
 }
-/* line 1339, ../sass/screen.scss */
+/* line 1347, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-detalle {
   line-height: 20px;
   font-size: 17px;
@@ -1437,7 +1441,7 @@ textarea {
 }
 
 /*BUSQUEDAS LABORALES*/
-/* line 1352, ../sass/screen.scss */
+/* line 1360, ../sass/screen.scss */
 #busquedas-laborales {
   background-color: white;
   display: flex;
@@ -1448,16 +1452,16 @@ textarea {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 1352, ../sass/screen.scss */
+  /* line 1360, ../sass/screen.scss */
   #busquedas-laborales {
     margin-top: 50px;
   }
 }
-/* line 1364, ../sass/screen.scss */
+/* line 1372, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:nth-child(odd) {
   background-color: #17384B;
 }
-/* line 1369, ../sass/screen.scss */
+/* line 1377, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:hover {
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
@@ -1465,7 +1469,7 @@ textarea {
   -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
-/* line 1377, ../sass/screen.scss */
+/* line 1385, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral {
   color: white;
   background-color: #406276;
@@ -1478,25 +1482,25 @@ textarea {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 1393, ../sass/screen.scss */
+/* line 1401, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-title {
   font-family: 'Lato Heavy', serif;
   font-variant: small-caps;
   font-size: 38px;
   padding: 15px;
 }
-/* line 1400, ../sass/screen.scss */
+/* line 1408, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-texto {
   padding: 5px;
   font-family: 'Lato Regular', serif;
   font-size: 16px;
 }
-/* line 1405, ../sass/screen.scss */
+/* line 1413, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-contacto {
   padding: 5px;
 }
 
-/* line 1411, ../sass/screen.scss */
+/* line 1419, ../sass/screen.scss */
 #busqueda-laboral-search {
   width: 100%;
   background-color: #000000;
@@ -1506,7 +1510,7 @@ textarea {
   align-items: center;
   min-height: 80px;
 }
-/* line 1419, ../sass/screen.scss */
+/* line 1427, ../sass/screen.scss */
 #busqueda-laboral-search input {
   background-color: transparent;
   max-width: 800px;
@@ -1520,33 +1524,33 @@ textarea {
   margin: 10px;
   padding: 10px;
 }
-/* line 1432, ../sass/screen.scss */
+/* line 1440, ../sass/screen.scss */
 #busqueda-laboral-search input ::-webkit-input-placeholder {
   color: #99C1DA;
 }
-/* line 1436, ../sass/screen.scss */
+/* line 1444, ../sass/screen.scss */
 #busqueda-laboral-search input :-moz-placeholder {
   /* Firefox 18- */
   color: #99C1DA;
 }
-/* line 1441, ../sass/screen.scss */
+/* line 1449, ../sass/screen.scss */
 #busqueda-laboral-search input ::-moz-placeholder {
   /* Firefox 19+ */
   color: #99C1DA;
 }
-/* line 1446, ../sass/screen.scss */
+/* line 1454, ../sass/screen.scss */
 #busqueda-laboral-search input :-ms-input-placeholder {
   color: #99C1DA;
 }
 @media (max-width: 800px) {
-  /* line 1419, ../sass/screen.scss */
+  /* line 1427, ../sass/screen.scss */
   #busqueda-laboral-search input {
     max-width: 95px;
     min-width: 95%;
   }
 }
 
-/* line 1457, ../sass/screen.scss */
+/* line 1465, ../sass/screen.scss */
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   color: white;
