--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1517,7 +1517,7 @@ table{
   font-family: 'Montserrat Semibold';
   font-style: normal;
   font-weight: normal;
-  src: local('Montserrat Semibold'), url('Montserrat-Semibold.ttf') format('woff');
+  src: local('Montserrat Semibold'), url('Montserrat-Semibold.otf') format('woff');
 }
 
 @font-face {
