--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -327,22 +327,6 @@ html {
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
-/* line 273, ../sass/screen.scss */
-#slider #slider-main #slide-01 {
-  background: black url(../img/img-01.jpg) 50% 50% no-repeat;
-}
-/* line 276, ../sass/screen.scss */
-#slider #slider-main #slide-02 {
-  background: black url(../img/img-02.jpg) 50% 50% no-repeat;
-}
-/* line 279, ../sass/screen.scss */
-#slider #slider-main #slide-03 {
-  background: black url(../img/img-03.jpg) 50% 50% no-repeat;
-}
-/* line 282, ../sass/screen.scss */
-#slider #slider-main #slide-04 {
-  background: black url(../img/img-04.jpg) 50% 50% no-repeat;
-}
 /* line 286, ../sass/screen.scss */
 #slider #slider-main .slide-shown-add {
   -webkit-animation: show-slide .4s;
@@ -992,8 +976,8 @@ html {
   }
 }
 
-/* line 907, ../sass/screen.scss */
-table {
+/* line 908, ../sass/screen.scss */
+#administracion table {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 15px;
   margin-top: 25px;
@@ -1003,16 +987,16 @@ table {
   border-radius: 10px;
   background-color: lightgrey;
 }
-/* line 919, ../sass/screen.scss */
-table th {
+/* line 920, ../sass/screen.scss */
+#administracion table th {
   padding: 10px;
 }
-/* line 924, ../sass/screen.scss */
-table td {
+/* line 925, ../sass/screen.scss */
+#administracion table td {
   padding: 10px;
 }
 
-/* line 930, ../sass/screen.scss */
+/* line 933, ../sass/screen.scss */
 #footer {
   margin: 10px;
   cursor: pointer;
@@ -1024,13 +1008,13 @@ table td {
   flex-wrap: wrap;
   justify-content: center;
 }
-/* line 940, ../sass/screen.scss */
+/* line 943, ../sass/screen.scss */
 #footer div {
   margin: 5px;
 }
 
 /*SECCIONES DE ADMINISTRACION*/
-/* line 946, ../sass/screen.scss */
+/* line 949, ../sass/screen.scss */
 #ingreso {
   margin-top: 100px;
   max-width: 100%;
@@ -1040,13 +1024,13 @@ table td {
   justify-content: center;
 }
 @media (max-width: 600px) {
-  /* line 946, ../sass/screen.scss */
+  /* line 949, ../sass/screen.scss */
   #ingreso {
     margin-top: 50px;
   }
 }
 
-/* line 958, ../sass/screen.scss */
+/* line 961, ../sass/screen.scss */
 #administracion,
 #noticias {
   display: flex;
@@ -1057,14 +1041,14 @@ table td {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 958, ../sass/screen.scss */
+  /* line 961, ../sass/screen.scss */
   #administracion,
   #noticias {
     margin-top: 50px;
   }
 }
 
-/* line 983, ../sass/screen.scss */
+/* line 986, ../sass/screen.scss */
 .administracion-title,
 #administracion-form,
 .administracion-separator,
@@ -1081,12 +1065,12 @@ table td {
   max-width: 1000px;
 }
 
-/* line 1000, ../sass/screen.scss */
+/* line 1003, ../sass/screen.scss */
 #ingreso-form {
   width: 100%;
 }
 
-/* line 1004, ../sass/screen.scss */
+/* line 1007, ../sass/screen.scss */
 #administracion-form,
 #nuevo-usuario-form,
 #ingreso-form {
@@ -1094,7 +1078,7 @@ table td {
   flex-direction: column;
   justify-content: flex-start;
 }
-/* line 1010, ../sass/screen.scss */
+/* line 1013, ../sass/screen.scss */
 #administracion-form .administracion-inputs,
 #administracion-form .nuevo-usuario-inputs,
 #nuevo-usuario-form .administracion-inputs,
@@ -1106,10 +1090,10 @@ table td {
   flex-wrap: wrap;
 }
 
-/* line 1019, ../sass/screen.scss */
+/* line 1022, ../sass/screen.scss */
 #administracion-oferta,
 #administracion-noticias,
-#administracion-slider {
+#administracion-sliders {
   max-width: 1000px;
   width: 100%;
   display: flex;
@@ -1117,7 +1101,7 @@ table td {
   justify-content: flex-start;
 }
 
-/* line 1029, ../sass/screen.scss */
+/* line 1032, ../sass/screen.scss */
 .administracion-title,
 .nuevo-usuario-title,
 .noticias-title,
@@ -1136,7 +1120,7 @@ table td {
   background-image: linear-gradient(to right, #dedede, #ffffff);
 }
 @media (max-width: 600px) {
-  /* line 1029, ../sass/screen.scss */
+  /* line 1032, ../sass/screen.scss */
   .administracion-title,
   .nuevo-usuario-title,
   .noticias-title,
@@ -1145,19 +1129,19 @@ table td {
   }
 }
 
-/* line 1047, ../sass/screen.scss */
+/* line 1050, ../sass/screen.scss */
 .administracion-input,
 .nuevo-usuario-input {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
-/* line 1052, ../sass/screen.scss */
+/* line 1055, ../sass/screen.scss */
 .administracion-input span,
 .nuevo-usuario-input span {
   margin: 5px;
 }
-/* line 1057, ../sass/screen.scss */
+/* line 1060, ../sass/screen.scss */
 .administracion-input input,
 .administracion-input select,
 .nuevo-usuario-input input,
@@ -1171,7 +1155,7 @@ table td {
   margin-bottom: 5px;
 }
 
-/* line 1072, ../sass/screen.scss */
+/* line 1075, ../sass/screen.scss */
 .administracion-input textarea {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -1183,13 +1167,13 @@ table td {
   max-height: 300px;
 }
 
-/* line 1086, ../sass/screen.scss */
+/* line 1089, ../sass/screen.scss */
 .administracion-button-bar,
 .nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 }
-/* line 1092, ../sass/screen.scss */
+/* line 1095, ../sass/screen.scss */
 .administracion-button-bar button,
 .nuevo-usuario-button-bar button {
   background-color: transparent;
@@ -1197,13 +1181,13 @@ table td {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1098, ../sass/screen.scss */
+/* line 1101, ../sass/screen.scss */
 .administracion-button-bar button:hover,
 .nuevo-usuario-button-bar button:hover {
   border-bottom-color: #17384B;
 }
 
-/* line 1103, ../sass/screen.scss */
+/* line 1106, ../sass/screen.scss */
 .administracion-separator {
   width: 100%;
   height: 2px !important;
@@ -1213,13 +1197,13 @@ table td {
   margin-bottom: 50px;
 }
 
-/* line 1112, ../sass/screen.scss */
+/* line 1115, ../sass/screen.scss */
 .administracion-fotos {
   display: flex;
   flex-direction: row;
 }
 
-/* line 1117, ../sass/screen.scss */
+/* line 1120, ../sass/screen.scss */
 .input-foto {
   height: 50px;
   width: 50px;
@@ -1230,14 +1214,14 @@ table td {
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
-/* line 1126, ../sass/screen.scss */
+/* line 1129, ../sass/screen.scss */
 .input-foto input {
   opacity: 0;
   height: 50px;
   width: 50px;
   background-color: #133548;
 }
-/* line 1132, ../sass/screen.scss */
+/* line 1135, ../sass/screen.scss */
 .input-foto img {
   position: absolute;
   background-color: #133548;
@@ -1248,7 +1232,7 @@ table td {
   border-radius: 2px;
 }
 
-/* line 1143, ../sass/screen.scss */
+/* line 1146, ../sass/screen.scss */
 .administracion-sub-title {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 25px;
@@ -1259,14 +1243,14 @@ table td {
 }
 
 /*NOTICIAS*/
-/* line 1155, ../sass/screen.scss */
+/* line 1158, ../sass/screen.scss */
 #noticias-filtro {
   display: flex;
   padding: 20px;
   flex-direction: row;
   justify-content: left;
 }
-/* line 1160, ../sass/screen.scss */
+/* line 1163, ../sass/screen.scss */
 #noticias-filtro select {
   margin-right: 2%;
   height: 32px;
@@ -1279,12 +1263,12 @@ table td {
   background-color: transparent;
 }
 
-/* line 1203, ../sass/screen.scss */
+/* line 1206, ../sass/screen.scss */
 #noticias-main {
   background-color: #133548;
 }
 
-/* line 1208, ../sass/screen.scss */
+/* line 1211, ../sass/screen.scss */
 #noticias-form {
   max-width: 1000px;
   width: 100%;
@@ -1294,30 +1278,33 @@ table td {
   background-color: white;
 }
 
-/* line 1218, ../sass/screen.scss */
+/* line 1221, ../sass/screen.scss */
 #noticias-panel {
   margin: 35px;
 }
 
 @media (min-width: 385px) {
-  /* line 1223, ../sass/screen.scss */
+  /* line 1226, ../sass/screen.scss */
   #noticias-panel-fotos {
     max-width: 50%;
   }
 }
-/* line 1227, ../sass/screen.scss */
+/* line 1230, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main {
   overflow: hidden;
+  min-height: 400px;
+  min-width: 300px;
 }
-/* line 1229, ../sass/screen.scss */
+/* line 1234, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main img {
   margin-left: 15px;
   border-radius: 5px;
   border: 3px solid white;
   max-height: 90%;
-  max-width: 90%;
+  max-width: 300px;
+  min-width: 300px;
 }
-/* line 1238, ../sass/screen.scss */
+/* line 1244, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-thumbs img {
   margin-left: 15px;
   margin-top: 5px;
@@ -1326,12 +1313,12 @@ table td {
   border-radius: 2px;
 }
 
-/* line 1248, ../sass/screen.scss */
+/* line 1254, ../sass/screen.scss */
 #noticias-panel-texto {
   color: white;
   padding: 5px;
 }
-/* line 1251, ../sass/screen.scss */
+/* line 1257, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-titulo {
   width: 100%;
   margin-bottom: 15px;
@@ -1341,7 +1328,7 @@ table td {
   color: #FFFFFF;
   font-family: 'Lato Heavy', serif;
 }
-/* line 1262, ../sass/screen.scss */
+/* line 1268, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-detalle {
   font-family: 'Montserrat Light', serif;
   width: 95%;
@@ -1355,21 +1342,21 @@ table td {
 }
 
 @media (min-width: 600px) {
-  /* line 1275, ../sass/screen.scss */
+  /* line 1281, ../sass/screen.scss */
   #noticias-panel {
     display: flex;
     flex-direction: row-reverse;
   }
 }
 
-/* line 1282, ../sass/screen.scss */
+/* line 1288, ../sass/screen.scss */
 #noticias-nuevo-comentario {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-/* line 1287, ../sass/screen.scss */
+/* line 1293, ../sass/screen.scss */
 #noticias-nuevo-comentario textarea {
   width: 100%;
   right: 5px;
@@ -1380,14 +1367,14 @@ table td {
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
-/* line 1299, ../sass/screen.scss */
+/* line 1305, ../sass/screen.scss */
 #noticias-nuevo-comentario div {
   width: 90%;
   position: relative;
   margin-top: -45px;
   margin-bottom: 20px;
 }
-/* line 1304, ../sass/screen.scss */
+/* line 1310, ../sass/screen.scss */
 #noticias-nuevo-comentario div #noticias-nuevo-btn {
   width: 110px;
   background-color: white;
@@ -1402,19 +1389,19 @@ table td {
   text-align: center;
 }
 
-/* line 1321, ../sass/screen.scss */
+/* line 1327, ../sass/screen.scss */
 #noticias-comentarios {
   background-color: #3f6175;
   color: white;
 }
-/* line 1324, ../sass/screen.scss */
+/* line 1330, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-list {
   max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* line 1331, ../sass/screen.scss */
+/* line 1337, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-title {
   width: 90%;
   font-family: 'Lato Heavy', serif;
@@ -1426,17 +1413,17 @@ table td {
   font-size: 38px;
   line-height: 25px;
 }
-/* line 1343, ../sass/screen.scss */
+/* line 1349, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario {
   max-width: 90%;
   margin-bottom: 20px;
 }
-/* line 1347, ../sass/screen.scss */
+/* line 1353, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-user {
   line-height: 24px;
   font-size: 23px;
 }
-/* line 1352, ../sass/screen.scss */
+/* line 1358, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-detalle {
   line-height: 20px;
   font-size: 17px;
@@ -1445,7 +1432,7 @@ table td {
 }
 
 /*BUSQUEDAS LABORALES*/
-/* line 1365, ../sass/screen.scss */
+/* line 1371, ../sass/screen.scss */
 #busquedas-laborales {
   background-color: white;
   display: flex;
@@ -1456,16 +1443,16 @@ table td {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 1365, ../sass/screen.scss */
+  /* line 1371, ../sass/screen.scss */
   #busquedas-laborales {
     margin-top: 50px;
   }
 }
-/* line 1377, ../sass/screen.scss */
+/* line 1383, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:nth-child(odd) {
   background-color: #17384B;
 }
-/* line 1382, ../sass/screen.scss */
+/* line 1388, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:hover {
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
@@ -1473,7 +1460,7 @@ table td {
   -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
-/* line 1390, ../sass/screen.scss */
+/* line 1396, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral {
   color: white;
   background-color: #406276;
@@ -1486,25 +1473,25 @@ table td {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 1406, ../sass/screen.scss */
+/* line 1412, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-title {
   font-family: 'Lato Heavy', serif;
   font-variant: small-caps;
   font-size: 38px;
   padding: 15px;
 }
-/* line 1413, ../sass/screen.scss */
+/* line 1419, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-texto {
   padding: 5px;
   font-family: 'Lato Regular', serif;
   font-size: 16px;
 }
-/* line 1418, ../sass/screen.scss */
+/* line 1424, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-contacto {
   padding: 5px;
 }
 
-/* line 1424, ../sass/screen.scss */
+/* line 1430, ../sass/screen.scss */
 #busqueda-laboral-search {
   width: 100%;
   background-color: #000000;
@@ -1514,7 +1501,7 @@ table td {
   align-items: center;
   min-height: 80px;
 }
-/* line 1432, ../sass/screen.scss */
+/* line 1438, ../sass/screen.scss */
 #busqueda-laboral-search input {
   background-color: transparent;
   max-width: 800px;
@@ -1528,33 +1515,33 @@ table td {
   margin: 10px;
   padding: 10px;
 }
-/* line 1445, ../sass/screen.scss */
+/* line 1451, ../sass/screen.scss */
 #busqueda-laboral-search input ::-webkit-input-placeholder {
   color: #99C1DA;
 }
-/* line 1449, ../sass/screen.scss */
+/* line 1455, ../sass/screen.scss */
 #busqueda-laboral-search input :-moz-placeholder {
   /* Firefox 18- */
   color: #99C1DA;
 }
-/* line 1454, ../sass/screen.scss */
+/* line 1460, ../sass/screen.scss */
 #busqueda-laboral-search input ::-moz-placeholder {
   /* Firefox 19+ */
   color: #99C1DA;
 }
-/* line 1459, ../sass/screen.scss */
+/* line 1465, ../sass/screen.scss */
 #busqueda-laboral-search input :-ms-input-placeholder {
   color: #99C1DA;
 }
 @media (max-width: 800px) {
-  /* line 1432, ../sass/screen.scss */
+  /* line 1438, ../sass/screen.scss */
   #busqueda-laboral-search input {
     max-width: 95px;
     min-width: 95%;
   }
 }
 
-/* line 1470, ../sass/screen.scss */
+/* line 1476, ../sass/screen.scss */
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   color: white;
@@ -1598,7 +1585,7 @@ table td {
   font-family: 'Montserrat Semibold';
   font-style: normal;
   font-weight: normal;
-  src: local("Montserrat Semibold"), url("Montserrat-Semibold.otf") format("woff");
+  src: local("Montserrat Semibold"), url("Montserrat-SemiBold.otf") format("woff");
 }
 @font-face {
   font-family: 'Lato Black';
