--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1010,29 +1010,34 @@ html {
 #administracion table {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 15px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  color: white;
+  max-width: 95%;
+  margin-left: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  background-color: lightgrey;
+  background-color: #2f96b4;
 }
-/* line 950, ../sass/screen.scss */
+/* line 951, ../sass/screen.scss */
 #administracion table th {
   padding: 10px;
+  font-family: "Montserrat Semibold", sans-serif;
+  font-size: 17px;
 }
-/* line 955, ../sass/screen.scss */
+/* line 958, ../sass/screen.scss */
 #administracion table td {
   padding: 10px;
+  font-family: 'Montserrat Light', serif;
+  font-size: 14px;
 }
-/* line 960, ../sass/screen.scss */
+/* line 965, ../sass/screen.scss */
 #administracion table .administracion-row:hover,
 #administracion table .tr-selected {
   background-color: #1c3e52;
   color: white;
 }
 
-/* line 979, ../sass/screen.scss */
+/* line 984, ../sass/screen.scss */
 #footer {
   margin: 10px;
   cursor: pointer;
@@ -1044,13 +1049,13 @@ html {
   flex-wrap: wrap;
   justify-content: center;
 }
-/* line 989, ../sass/screen.scss */
+/* line 994, ../sass/screen.scss */
 #footer div {
   margin: 5px;
 }
 
 /*SECCIONES DE ADMINISTRACION*/
-/* line 995, ../sass/screen.scss */
+/* line 1000, ../sass/screen.scss */
 #ingreso {
   margin-top: 100px;
   max-width: 100%;
@@ -1060,13 +1065,13 @@ html {
   justify-content: center;
 }
 @media (max-width: 600px) {
-  /* line 995, ../sass/screen.scss */
+  /* line 1000, ../sass/screen.scss */
   #ingreso {
     margin-top: 50px;
   }
 }
 
-/* line 1007, ../sass/screen.scss */
+/* line 1012, ../sass/screen.scss */
 #administracion,
 #noticias,
 #servicios-inner {
@@ -1078,7 +1083,7 @@ html {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 1007, ../sass/screen.scss */
+  /* line 1012, ../sass/screen.scss */
   #administracion,
   #noticias,
   #servicios-inner {
@@ -1086,7 +1091,7 @@ html {
   }
 }
 
-/* line 1033, ../sass/screen.scss */
+/* line 1038, ../sass/screen.scss */
 .administracion-title,
 #administracion-form,
 .administracion-separator,
@@ -1103,12 +1108,12 @@ html {
   max-width: 1000px;
 }
 
-/* line 1050, ../sass/screen.scss */
+/* line 1055, ../sass/screen.scss */
 #ingreso-form {
   width: 100%;
 }
 
-/* line 1054, ../sass/screen.scss */
+/* line 1059, ../sass/screen.scss */
 #administracion-form,
 #nuevo-usuario-form,
 #ingreso-form {
@@ -1116,7 +1121,7 @@ html {
   flex-direction: column;
   justify-content: flex-start;
 }
-/* line 1060, ../sass/screen.scss */
+/* line 1065, ../sass/screen.scss */
 #administracion-form .administracion-inputs,
 #administracion-form .nuevo-usuario-inputs,
 #nuevo-usuario-form .administracion-inputs,
@@ -1128,7 +1133,7 @@ html {
   flex-wrap: wrap;
 }
 
-/* line 1069, ../sass/screen.scss */
+/* line 1074, ../sass/screen.scss */
 #administracion-oferta,
 #administracion-noticias,
 #administracion-sliders {
@@ -1139,7 +1144,7 @@ html {
   justify-content: flex-start;
 }
 
-/* line 1079, ../sass/screen.scss */
+/* line 1086, ../sass/screen.scss */
 .administracion-title,
 .nuevo-usuario-title,
 .noticias-title,
@@ -1158,7 +1163,7 @@ html {
   background-image: linear-gradient(to right, #dedede, #ffffff);
 }
 @media (max-width: 600px) {
-  /* line 1079, ../sass/screen.scss */
+  /* line 1086, ../sass/screen.scss */
   .administracion-title,
   .nuevo-usuario-title,
   .noticias-title,
@@ -1167,19 +1172,19 @@ html {
   }
 }
 
-/* line 1097, ../sass/screen.scss */
+/* line 1104, ../sass/screen.scss */
 .administracion-input,
 .nuevo-usuario-input {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
-/* line 1102, ../sass/screen.scss */
+/* line 1109, ../sass/screen.scss */
 .administracion-input span,
 .nuevo-usuario-input span {
   margin: 5px;
 }
-/* line 1107, ../sass/screen.scss */
+/* line 1114, ../sass/screen.scss */
 .administracion-input input,
 .administracion-input select,
 .nuevo-usuario-input input,
@@ -1193,7 +1198,7 @@ html {
   margin-bottom: 5px;
 }
 
-/* line 1122, ../sass/screen.scss */
+/* line 1129, ../sass/screen.scss */
 .administracion-input textarea {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -1203,15 +1208,16 @@ html {
   background-color: transparent;
   margin-bottom: 5px;
   max-height: 300px;
+  min-height: 300px;
 }
 
-/* line 1136, ../sass/screen.scss */
+/* line 1144, ../sass/screen.scss */
 .administracion-button-bar,
 .nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 }
-/* line 1142, ../sass/screen.scss */
+/* line 1150, ../sass/screen.scss */
 .administracion-button-bar button,
 .nuevo-usuario-button-bar button {
   background-color: transparent;
@@ -1219,13 +1225,13 @@ html {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1148, ../sass/screen.scss */
+/* line 1156, ../sass/screen.scss */
 .administracion-button-bar button:hover,
 .nuevo-usuario-button-bar button:hover {
   border-bottom-color: #17384B;
 }
 
-/* line 1153, ../sass/screen.scss */
+/* line 1161, ../sass/screen.scss */
 .administracion-separator {
   width: 100%;
   height: 2px !important;
@@ -1235,42 +1241,53 @@ html {
   margin-bottom: 50px;
 }
 
-/* line 1162, ../sass/screen.scss */
+/* line 1170, ../sass/screen.scss */
 .administracion-fotos {
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-/* line 1167, ../sass/screen.scss */
+/* line 1178, ../sass/screen.scss */
+.administracion-fotos span {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  font-family: 'Montserrat Light', serif;
+  font-size: 15px;
+}
+
+/* line 1187, ../sass/screen.scss */
 .input-foto {
-  height: 50px;
-  width: 50px;
+  height: 39px;
+  width: 39px;
   overflow: hidden;
-  background-color: #133548;
   border: 1px solid darkgray;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
-/* line 1176, ../sass/screen.scss */
+/* line 1199, ../sass/screen.scss */
 .input-foto input {
   opacity: 0;
-  height: 50px;
-  width: 50px;
-  background-color: #133548;
+  height: 39px;
+  width: 39px;
 }
-/* line 1182, ../sass/screen.scss */
+/* line 1204, ../sass/screen.scss */
 .input-foto img {
   position: absolute;
-  background-color: #133548;
-  max-height: 49px;
-  clip: rect(0px, 50px, 50px, 0px);
+  max-height: 38px;
+  clip: rect(0px, 39px, 39px, 0px);
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
 
-/* line 1193, ../sass/screen.scss */
+/* line 1214, ../sass/screen.scss */
 .administracion-sub-title {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 25px;
@@ -1281,14 +1298,14 @@ html {
 }
 
 /*NOTICIAS*/
-/* line 1205, ../sass/screen.scss */
+/* line 1226, ../sass/screen.scss */
 #noticias-filtro {
   display: flex;
   padding: 20px;
   flex-direction: row;
   justify-content: left;
 }
-/* line 1210, ../sass/screen.scss */
+/* line 1231, ../sass/screen.scss */
 #noticias-filtro select {
   margin-right: 2%;
   height: 32px;
@@ -1301,12 +1318,12 @@ html {
   background-color: transparent;
 }
 
-/* line 1253, ../sass/screen.scss */
+/* line 1274, ../sass/screen.scss */
 #noticias-main {
   background-color: #133548;
 }
 
-/* line 1258, ../sass/screen.scss */
+/* line 1279, ../sass/screen.scss */
 #noticias-form {
   max-width: 1000px;
   width: 100%;
@@ -1316,24 +1333,24 @@ html {
   background-color: white;
 }
 
-/* line 1268, ../sass/screen.scss */
+/* line 1289, ../sass/screen.scss */
 #noticias-panel {
   margin: 35px;
 }
 
 @media (min-width: 385px) {
-  /* line 1273, ../sass/screen.scss */
+  /* line 1294, ../sass/screen.scss */
   #noticias-panel-fotos {
     max-width: 50%;
   }
 }
-/* line 1277, ../sass/screen.scss */
+/* line 1298, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main {
   overflow: hidden;
   min-height: 400px;
   min-width: 300px;
 }
-/* line 1281, ../sass/screen.scss */
+/* line 1302, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main img {
   margin-left: 15px;
   border-radius: 5px;
@@ -1342,7 +1359,7 @@ html {
   max-width: 300px;
   min-width: 300px;
 }
-/* line 1291, ../sass/screen.scss */
+/* line 1312, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-thumbs img {
   margin-left: 15px;
   margin-top: 5px;
@@ -1351,12 +1368,12 @@ html {
   border-radius: 2px;
 }
 
-/* line 1301, ../sass/screen.scss */
+/* line 1322, ../sass/screen.scss */
 #noticias-panel-texto {
   color: white;
   padding: 5px;
 }
-/* line 1304, ../sass/screen.scss */
+/* line 1325, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-titulo {
   width: 100%;
   margin-bottom: 15px;
@@ -1366,7 +1383,7 @@ html {
   color: #FFFFFF;
   font-family: 'Lato Heavy', serif;
 }
-/* line 1315, ../sass/screen.scss */
+/* line 1336, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-detalle {
   font-family: 'Montserrat Light', serif;
   width: 95%;
@@ -1380,21 +1397,21 @@ html {
 }
 
 @media (min-width: 600px) {
-  /* line 1328, ../sass/screen.scss */
+  /* line 1349, ../sass/screen.scss */
   #noticias-panel {
     display: flex;
     flex-direction: row-reverse;
   }
 }
 
-/* line 1335, ../sass/screen.scss */
+/* line 1356, ../sass/screen.scss */
 #noticias-nuevo-comentario {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-/* line 1340, ../sass/screen.scss */
+/* line 1361, ../sass/screen.scss */
 #noticias-nuevo-comentario textarea {
   width: 100%;
   right: 5px;
@@ -1405,14 +1422,14 @@ html {
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
-/* line 1352, ../sass/screen.scss */
+/* line 1373, ../sass/screen.scss */
 #noticias-nuevo-comentario div {
   width: 90%;
   position: relative;
   margin-top: -45px;
   margin-bottom: 20px;
 }
-/* line 1357, ../sass/screen.scss */
+/* line 1378, ../sass/screen.scss */
 #noticias-nuevo-comentario div #noticias-nuevo-btn {
   width: 110px;
   background-color: white;
@@ -1427,19 +1444,19 @@ html {
   text-align: center;
 }
 
-/* line 1374, ../sass/screen.scss */
+/* line 1395, ../sass/screen.scss */
 #noticias-comentarios {
   background-color: #3f6175;
   color: white;
 }
-/* line 1377, ../sass/screen.scss */
+/* line 1398, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-list {
   max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* line 1384, ../sass/screen.scss */
+/* line 1405, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-title {
   width: 90%;
   font-family: 'Lato Heavy', serif;
@@ -1451,17 +1468,17 @@ html {
   font-size: 38px;
   line-height: 25px;
 }
-/* line 1396, ../sass/screen.scss */
+/* line 1417, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario {
   max-width: 90%;
   margin-bottom: 20px;
 }
-/* line 1400, ../sass/screen.scss */
+/* line 1421, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-user {
   line-height: 24px;
   font-size: 23px;
 }
-/* line 1405, ../sass/screen.scss */
+/* line 1426, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-detalle {
   line-height: 20px;
   font-size: 17px;
@@ -1470,7 +1487,7 @@ html {
 }
 
 /*BUSQUEDAS LABORALES*/
-/* line 1418, ../sass/screen.scss */
+/* line 1439, ../sass/screen.scss */
 #busquedas-laborales {
   background-color: white;
   display: flex;
@@ -1481,16 +1498,16 @@ html {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 1418, ../sass/screen.scss */
+  /* line 1439, ../sass/screen.scss */
   #busquedas-laborales {
     margin-top: 50px;
   }
 }
-/* line 1430, ../sass/screen.scss */
+/* line 1451, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:nth-child(odd) {
   background-color: #17384B;
 }
-/* line 1435, ../sass/screen.scss */
+/* line 1456, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:hover {
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
@@ -1498,7 +1515,7 @@ html {
   -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
-/* line 1443, ../sass/screen.scss */
+/* line 1464, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral {
   color: white;
   background-color: #406276;
@@ -1511,25 +1528,25 @@ html {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 1459, ../sass/screen.scss */
+/* line 1480, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-title {
   font-family: 'Lato Heavy', serif;
   font-variant: small-caps;
   font-size: 38px;
   padding: 15px;
 }
-/* line 1466, ../sass/screen.scss */
+/* line 1487, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-texto {
   padding: 5px;
   font-family: 'Lato Regular', serif;
   font-size: 16px;
 }
-/* line 1471, ../sass/screen.scss */
+/* line 1492, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-contacto {
   padding: 5px;
 }
 
-/* line 1477, ../sass/screen.scss */
+/* line 1498, ../sass/screen.scss */
 #busqueda-laboral-search {
   width: 100%;
   background-color: #000000;
@@ -1539,7 +1556,7 @@ html {
   align-items: center;
   min-height: 80px;
 }
-/* line 1485, ../sass/screen.scss */
+/* line 1506, ../sass/screen.scss */
 #busqueda-laboral-search input {
   background-color: transparent;
   max-width: 800px;
@@ -1553,33 +1570,33 @@ html {
   margin: 10px;
   padding: 10px;
 }
-/* line 1498, ../sass/screen.scss */
+/* line 1519, ../sass/screen.scss */
 #busqueda-laboral-search input ::-webkit-input-placeholder {
   color: #99C1DA;
 }
-/* line 1502, ../sass/screen.scss */
+/* line 1523, ../sass/screen.scss */
 #busqueda-laboral-search input :-moz-placeholder {
   /* Firefox 18- */
   color: #99C1DA;
 }
-/* line 1507, ../sass/screen.scss */
+/* line 1528, ../sass/screen.scss */
 #busqueda-laboral-search input ::-moz-placeholder {
   /* Firefox 19+ */
   color: #99C1DA;
 }
-/* line 1512, ../sass/screen.scss */
+/* line 1533, ../sass/screen.scss */
 #busqueda-laboral-search input :-ms-input-placeholder {
   color: #99C1DA;
 }
 @media (max-width: 800px) {
-  /* line 1485, ../sass/screen.scss */
+  /* line 1506, ../sass/screen.scss */
   #busqueda-laboral-search input {
     max-width: 95px;
     min-width: 95%;
   }
 }
 
-/* line 1523, ../sass/screen.scss */
+/* line 1544, ../sass/screen.scss */
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   color: white;
